fixed banner image and linespacing in footer

--- a/css/custom.css
+++ b/css/custom.css
@@ -90,6 +90,10 @@ small, .small {
     font-size: 75%;
 }
 
+.ocw-banner {
+    margin: auto;
+}
+
 
 @media (max-width: 599px) {
 
